fixed spacing

--- a/assets/tailwind-compiled.css
+++ b/assets/tailwind-compiled.css
@@ -342,6 +342,10 @@
     margin-top: 24px
 }
 
+.\!mb-1 {
+    margin-bottom: 4px !important
+}
+
 .line-clamp-1 {
     overflow: hidden;
     display: -webkit-box;
